--- a/style.css
+++ b/style.css
@@ -1,2 +1,20 @@
-background-color: #f0f0f0;
-			font-family: Arial, sans-serif;
+p{
+		color: black;
+		position: relative; top: 75px;
+}
+
+body{
+		background-color: #FFF9F1;
+}
+
+a{
+		position: relative; top: 600px; left : 700px;
+}
+
+h1{
+		position : absolute; left : 650px;
+}
+
+div{
+	position : relative; top : 100px;
+}
