--- a/style.css
+++ b/style.css
@@ -1,20 +1,36 @@
-p{
-		color: black;
-		position: relative; top: 75px;
-}
+<head>
+	<style>
+		body {
+			background-color: #FFF8EB;
+		}
 
-body{
-		background-color: #FFF9F1;
-}
+		a {
+			position: relative;
+			top: 600px;
+			left: 700px;
+		}
 
-a{
-		position: relative; top: 600px; left : 700px;
-}
+		h1 {
+			position: absolute;
+			left: 650px;
+		}
 
-h1{
-		position : absolute; left : 650px;
-}
+		.zoom-in {
+		  transition: transform .3s;
+		}
 
-div{
-	position : relative; top : 100px;
+		.zoom-in:hover {
+		  transform: scale(1.02);
+		}
+
+		p {
+			position: relative; top : 90px
+		}
+		.container {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
 }
+	</style>
+</head>
