--- a/formulaire.css
+++ b/formulaire.css
@@ -1,3 +1,9 @@
+
+
+
+
+
+
 .backvideo {
   position: fixed;
   right: 0;
@@ -5,6 +11,37 @@
   min-width: 100%;
   min-height: 100%;
   z-index: -1;
+}
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  nav li {
+    display: inline-block;
+    margin-right: 120px;
+  }
+
+  nav a {
+    display: block;
+    padding: 50px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #333;
+  }
+
+  nav a:hover {
+    color: #333;
+    background-color: #FFDD79;
+  }
+nav{
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+
+
+
 }
 
 form {
